Updated dt because it erases variance

--- a/brownian_bridge_Miyahara.ipynb
+++ b/brownian_bridge_Miyahara.ipynb
@@ -258,11 +258,11 @@
     "        #First, calculate proper variance for brownian motion. We will use this for the\n",
     "        # \"scale\" argument for np.random.normal, which signifies the variance.\n",
     "\n",
-    "        dt = self.T / n_steps \n",
+    "        #dt = self.T / n_steps \n",
     "\n",
     "        #Generate random simulations using np.random.normal. \n",
     "\n",
-    "        simulations = np.random.normal(loc=0, scale=np.sqrt(dt), size=(self.n_rejections, n_steps))\n",
+    "        simulations = np.random.normal(loc=0, size=(self.n_rejections, n_steps))\n",
     "\n",
     "        #Next, we sum up the data points from the simulations. Axis = 1 because it indexes over time steps within\n",
     "        # a single path.\n",
@@ -305,11 +305,11 @@
     "     \n",
     "        #Instead of rejection sampling, we take one path and force it to end at 0\n",
     "        #Calculate variance\n",
-    "        dt = self.T / n_steps \n",
+    "        #dt = self.T / n_steps \n",
     "        \n",
     "        #This time, no n_rejections because we won't reject any\n",
     "\n",
-    "        simulations = np.random.normal(loc=0, scale=np.sqrt(dt), size=(n_steps))\n",
+    "        simulations = np.random.normal(loc=0, size=(n_steps))\n",
     "        #For question 4, using Laplace distribution.\n",
     "        #simulations = np.random.laplace(loc=0, scale=np.sqrt(dt), size=(n_steps))\n",
     "\n",
